@@ -52,6 +52,7 @@ DEFAULT_CHANNEL_ALIAS = 'https://conda.binstar.org/'
 
 rc_bool_keys = [
     'always_yes',
+    'allow_softlinks',
     'changeps1',
     'use_pip',
     'binstar_upload',
@@ -222,6 +223,7 @@ changeps1 = bool(rc.get('changeps1', True))
 use_pip = bool(rc.get('use_pip', True))
 binstar_upload = rc.get('binstar_upload', None) # None means ask
 binstar_personal = bool(rc.get('binstar_personal', True))
+allow_softlinks = bool(rc.get('allow_softlinks', True))
 # set packages disallowed to be installed
 disallow = set(rc.get('disallow', []))
 # packages which are added to a newly created environment by default
